--- a/contact/templates/contact/homepage.html
+++ b/contact/templates/contact/homepage.html
@@ -14,10 +14,10 @@
         <form class="form-inline mb-5" enctype="multipart/form-data" method="post">
             {% csrf_token %}
             <div class="form-group mb-2 mr-2">
-                <input type="text" class="form-control-input" id="tableName" name="tableName" placeholder="Table Name">
+                <input type="text" class="form-control-input" id="tableName" name="tableName" placeholder="Table Name" required>
             </div>
             <div class="form-group mb-2">
-                <input type="file" class="form-control-file" id="contactFileUpload" name="csv_file">
+                <input type="file" class="form-control-file" id="contactFileUpload" name="csv_file" required>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
